# rag-stack

./: .gitignore  LICENSE  README.md  deploy-gcp.sh  main.tf  run-dev.sh  run_dev.sh  sample.txt  terraform.tfstate
containerize-llms/falcon7b/: README.md  kubernetes_deployment.yaml
containerize-llms/llama2-7b/: kubernetes_deployment.yaml  main.py
containerize-llms/llama2-7b/llama2-7b/: Dockerfile  config.yaml  (+1 more)
dockerize-llms/falcon7b/: README.md  main.py
dockerize-llms/gpt4all/: README.md
gke-cluster/: main.tf
python/: .gitignore  README.md  setup.py
python/ragstack/: __init__.py
ragstack-ui/: Dockerfile  index.html  local.env  package-lock.json  package.json  tailwind.config.js
ragstack-ui/.subframe/: sync.json
ragstack-ui/src/: App.css  App.tsx  utils.tsx
scripts/aks/: README.md  main.tf
scripts/aws/: deploy-aws-sh  main.tf  providers.tf  terraform.tfstate.backup  terraform.tfvars  vars.tf
scripts/azure/: README.md  deploy-acr.ps1  deploy-aks.ps1  deploy-aks.sh  main.tf
scripts/local/: run-dev.sh
server/: Dockerfile  README.md  docker_pyproject.toml  example.env  pyproject.toml
server/connectors/: __init__.py  file_connector.py
server/database/: database.py
server/embedding_generation/: local.py  models.py  services.py
server/llm/: __init__.py  llm.py
server/llm/local/: .gitignore
server/models/: api.py  models.py
server/server/: main.py
server/vectorstore/: __init__.py  chroma_vectorstore.py  qdrant_vectorstore.py  weaviate_vectorstore.py
ui/ragstack-ui/: package-lock.json  package.json  tailwind.config.js
(+68 files in other folders)
