[tool.poetry]
name = "rag-stack"
version = "0.1.0"
description = ""
authors = ["ayan <ayan@psychic.dev>"]
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
pydantic = "^1.10.5"
tenacity = "^8.2.1"
tiktoken = "^0.3.3"
numpy = "^1.24.2"
docx2txt = "^0.8"
PyPDF2 = "^3.0.1"
python-pptx = "^0.6.21"
python-multipart = "^0.0.6"
arrow = "^1.2.3"
markdownify = "^0.11.6"
supabase = "^1.0.2"
langchain = "^0.0.129"
google-auth = "^2.17.1"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.83.0"
atlassian-python-api = "^3.36.0"
posthog = "^2.5.0"
python-docx = "^0.8.11"
stripe = "^5.4.0"
pygithub = "^1.58.1"
markdown = "^3.4.3"
slack-sdk = "^3.21.3"
html2text = "^2020.1.16"
chromadb = "^0.3.25"
python-dateutil = "^2.8.2"
simplejson = "^3.19.1"
delorean = "^1.0.0"
hubspot-api-client = "^7.5.0"
requests-oauthlib = "^1.3.1"
strenum = "^0.4.15"
poetry-dotenv-plugin = "^0.1.0"

[tool.poetry.scripts]
start = "server.main:start"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
